Red5 Changelog
==============

This file contains informations about the changes between the different
versions of Red5.

Red5 0.6.3  (unreleased)
------------------------
New Features:
- Remoting requests from "mx:RemoteObject" supported (Jira APPSERVER-144)
- RTMPT working with Tomcat

Bugfixes:
- validate RTMP handshake received from client (Jira APPSERVER-159)
- Array typed parameters are converted correctly (Jira APPSERVER-161)
- RTMPTHandler is wired through Spring (Jira APPSERVER-150)
- fixed concurrency issue in RTMP encoder that could result in wrong
  packet header types


Red5 0.6.2  (2007-06-17)
------------------------
Bugfixes:
- "pause" no longer breaks live streams (Jira APPSERVER-136)
- configured subscopes don't get released when a client disconnects
- AMF requests could not be decoded when run in the context root
  (Jira APPSERVER-146)
- fixed bug for Remoting requests without parameters (Jira APPSERVER-147)
- fixed issue with stop/start of war in Tomcat (Jira APPSERVER-155)
- fixed handshake reply for Flash Player 9 Update 3
- IMetaData supports fractional framerates (Jira APPSERVER-157)
- correctly reject empty stream names (Jira APPSERVER-156)
- fixed problem with loading some JAR files from the applications
  classpath (Jira APPSERVER-141)
- fixed decoding of Remoting requests with multiple parameters
  (Jira APPSERVER-151)


Red5 0.6.1  (2007-05-23)
------------------------
New Features:
- Switched to use mina 1.1, more config options in red5.properties
- Newly recorded files start with an "onMetaData" tag containing the
  duration and the codecs used
- Added a JMX subsystem with RMI and HTTP connectors
- Simplified MBean unregistration and added a registration check prior to 
  the unregister attempt (Jira APPSERVER-118)
- "IServerStream" now also supports "pause" and "seek"
- Enabled RMI + SSL for JMX
- Added JMX authentication
- Added Shutdown class for cleanly shutting down a Red5 instance
- Added support for AMF3 in remoting server